updated alt text on all images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav>
 		<div class="container">
 			<h3><a class="navhome" href="#">STUDIO</a></h3>
-			<img src="https://fit-front-end-course.s3.amazonaws.com/header-bg-jilene.jpg" alt="IMG1" style="width:100%;">
+			<img src="https://fit-front-end-course.s3.amazonaws.com/header-bg-jilene.jpg" alt="Header Lifestyle Stock Image of a Web Designer's Accessories" style="width:100%;">
 
 
 
@@ -66,7 +66,7 @@
 
 <section>
 	<div>
-		<img src="https://fit-front-end-course.s3.amazonaws.com/shop-icon-jilene.png" alt="IMG1"></img>
+		<img src="https://fit-front-end-course.s3.amazonaws.com/shop-icon-jilene.png" alt="ECommerce Shop Icon"></img>
 <h6>E-Commerce</h6>
 <div>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -84,7 +84,7 @@
 
 <h6>Web Security</h6>
 <div>
-<img src="https://fit-front-end-course.s3.amazonaws.com/security-icon-jilene.png" alt="IMG1"></img>
+<img src="https://fit-front-end-course.s3.amazonaws.com/security-icon-jilene.png" alt="Web Security Icon"></img>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
 </div>
 
@@ -98,6 +98,7 @@
 <br>
 <footer>
 <p class="Copyright">Copyright @ Jilene Jackson Website 2022</p>
+
 <p class="PrivacyTerms">Privacy Policy   Terms of Use</p>
 </footer>
 
