added social media icons to footer

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <br>
 <footer>
 <p class="Copyright">Copyright @ Jilene Jackson Website 2022</p>
-
+<img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
 <p class="PrivacyTerms">Privacy Policy   Terms of Use</p>
 </footer>
 
