updated SERVICES nav menu anchor link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 		<ul class="navbar">
-			<li> <a href="#">SERVICES</a></li>
+			<li> <a href="#SERVICES">SERVICES</a></li>
 
 			<li> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/portfolio.html">PORTFOLIO</a></li>
 
@@ -60,7 +60,7 @@
 <main>
 	<div class="services">
 
-		<h5>SERVICES</h5>
+		<h5><a id="SERVICES">SERVICES</a></h5>
 		<p>Lorem ipsum dolor sit amet consectetur.</p>
 </div>
 
