updated SERVICES responsive 3 column content

--- a/index.html
+++ b/index.html
@@ -58,39 +58,44 @@
 </section>
 
 <main>
-	<div class="services">
+	<section>
+	<div class="servicesheader">
 
 		<h5><a id="SERVICES">SERVICES</a></h5>
 		<p>Lorem ipsum dolor sit amet consectetur.</p>
-</div>
+	</div>
+	</section>
 
-<section>
+<section id="services">
+
 	<div>
 		<img src="https://fit-front-end-course.s3.amazonaws.com/shop-icon-jilene.png" alt="ECommerce Shop Icon"></img>
-<h6>E-Commerce</h6>
-<div>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-</div>
 
+	<span class="Ecommerce"><h6>E-Commerce</h6></span>
 
-<h6>Responsive Design</h6>
-<div>
-<img src="https://fit-front-end-course.s3.amazonaws.com/responsive-icon-jilene.png" alt="Responsive Web Icon"></img>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+	</div>
 
+	<div>
+			<img src="https://fit-front-end-course.s3.amazonaws.com/responsive-icon-jilene.png" alt="Responsive Web Icon"></img>
 
-<div>
+	<span class="ResponsiveDesign"><h6>Responsive Design</h6></span>
 
-<h6>Web Security</h6>
-<div>
-<img src="https://fit-front-end-course.s3.amazonaws.com/security-icon-jilene.png" alt="Web Security Icon"></img>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+	</div>
+
+	<div>
+		<img src="https://fit-front-end-course.s3.amazonaws.com/security-icon-jilene.png" alt="Web Security Icon"></img>
+
+		<span class="WebSecurity"><h6>Web Security</h6></span>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+	</div>
 
 </section>
 
 </main>
+
 <br>
 
 <hr>
