added nav button hover style

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
 
 		<ul class="navbar">
-			<li> <a href="#SERVICES">SERVICES</a></li>
+			<li class="serviceslink"> <a href="#SERVICES">SERVICES</a></li>
 
-			<li> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/portfolio.html">PORTFOLIO</a></li>
+			<li class="portfoliolink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/portfolio.html">PORTFOLIO</a></li>
 
-			<li> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/about.html">ABOUT</a></li>
+			<li class="aboutlink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/about.html">ABOUT</a></li>
 
-			<li> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/team.html">TEAM</a></li>
+			<li class="teamlink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/team.html">TEAM</a></li>
 
-			<li> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/contact.html">CONTACT</a></li>
+			<li class="contactlink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/contact.html">CONTACT</a></li>
 
 
 		</ul>
@@ -50,7 +50,7 @@
 		<h2 class="masthead-subheading">Welcome to Our Studio!</h2>
 		<h1 class="masthead-heading">It's Nice to Meet You</h1>
 
-		<button type="button" name="button">Tell Me More</button>
+		<button type="button"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/about.html">Tell Me More</a></button>
 
 	</div>
 
