updated nav achor links for index, about, portfolio, & team

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,11 @@
 	      <h4>STUDIO</h4>
 	      <nav>
 	        <ul>
-	          <li> <a href="#">SERVICES</a></li>
-	          <li> <a href="#">PORTFOLIO</a></li>
-	          <li> <a href="#">ABOUT</a></li>
-	          <li> <a href="#">TEAM</a></li>
-						<li> <a href="#">CONTACT</a></li>
-	          <li><span class="material-icons" name="hamburger">
+	          <li> <a href="index.html">SERVICES</a></li>
+	          <li> <a href="portfolio.html">PORTFOLIO</a></li>
+	          <li> <a href="about.html">ABOUT</a></li>
+	          <li> <a href="team.html">TEAM</a></li>
+						<li> <a href="contact.html">CONTACT</a></li>
 
 					</nav>
 		</header>
