--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav>
 		<div class="container">
 			<h3><a class="navhome" href="#">STUDIO</a></h3>
-			<img src="https://fit-front-end-course.s3.amazonaws.com/header-bg-jilene.jpg" alt="Header Lifestyle Stock Image of a Web Designer's Accessories" style="width:100%;">
+			<img src="https://fit-front-end-course.s3.amazonaws.com/header-bg-jilene.jpg" alt="Lifestyle Stock Image of a Web Designer's Accessories" style="width:100%;">
 
 
 
