updated nav w/background image increased home button font size

--- a/index.html
+++ b/index.html
@@ -19,28 +19,21 @@
 </head>
 
 <body>
-
 	<header>
-	<nav>
-		<div class="container">
-			<h3><a class="navhome" href="#">STUDIO</a></h3>
-			<img src="https://fit-front-end-course.s3.amazonaws.com/header-bg-jilene.jpg" alt="Lifestyle Stock Image of a Web Designer's Accessories" style="width:100%;">
+	      <h4>STUDIO</h4>
+	      <nav>
+	        <ul>
+	          <li> <a href="index.html">SERVICES</a></li>
+	          <li> <a href="portfolio.html">PORTFOLIO</a></li>
+	          <li> <a href="about.html">ABOUT</a></li>
+	          <li> <a href="team.html">TEAM</a></li>
+						<li> <a href="contact.html">CONTACT</a></li>
 
+					</nav>
+		</header>
 
+	<img src="https://fit-front-end-course.s3.amazonaws.com/header-bg-jilene.jpg" alt="Lifestyle Stock Image of a Web Designer's Accessories" style="width:100%;">
 
-		<ul class="navbar">
-			<li class="serviceslink"> <a href="#SERVICES">SERVICES</a></li>
-
-			<li class="portfoliolink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/portfolio.html">PORTFOLIO</a></li>
-
-			<li class="aboutlink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/about.html">ABOUT</a></li>
-
-			<li class="teamlink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/team.html">TEAM</a></li>
-
-			<li class="contactlink"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/contact.html">CONTACT</a></li>
-
-
-		</ul>
 		</nav>
 
 	</header>
@@ -50,7 +43,7 @@
 		<h2 class="masthead-subheading">Welcome to Our Studio!</h2>
 		<h1 class="masthead-heading">It's Nice to Meet You</h1>
 
-		<button type="button"> <a href="file:///Users/jilenejackson/Desktop/Jilene/FIT/Jilene-FIT-Frontend%20Dev-Final%20Project/studio_website/about.html">Tell Me More</a></button>
+		<button type="button" name="button"> <a href="about.html">Tell Me More</a></button>
 
 	</div>
 
