updated nav edits made to Services achor link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	      <h4>STUDIO</h4>
 	      <nav>
 	        <ul>
-	          <li> <a href="index.html">SERVICES</a></li>
+	          <li> <a href="#servicesheading">SERVICES</a></li>
 	          <li> <a href="portfolio.html">PORTFOLIO</a></li>
 	          <li> <a href="about.html">ABOUT</a></li>
 	          <li> <a href="team.html">TEAM</a></li>
@@ -54,7 +54,7 @@
 	<section>
 	<div class="servicesheader">
 
-		<h5><a id="SERVICES">SERVICES</a></h5>
+		<h5><a id="servicesheading">SERVICES</a></h5>
 		<p>Lorem ipsum dolor sit amet consectetur.</p>
 	</div>
 	</section>
