updated nav edits made to Studio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,17 +19,24 @@
 </head>
 
 <body>
+
 	<header>
-	      <h4>STUDIO</h4>
+
 	      <nav>
+
+
 	        <ul>
-	          <li> <a href="index.html">SERVICES</a></li>
-	          <li> <a href="portfolio.html">PORTFOLIO</a></li>
-	          <li> <a href="about.html">ABOUT</a></li>
-	          <li> <a href="team.html">TEAM</a></li>
-						<li> <a href="contact.html">CONTACT</a></li>
+						<h4><li class="navhome"> <a href="index.html">STUDIO</a></li></h4>
+	          <li class="serviceslink"> <a href="index.html">SERVICES</a></li>
+	          <li class="portfoliolink"> <a href="portfolio.html">PORTFOLIO</a></li>
+	          <li class="aboutlink"> <a href="about.html">ABOUT</a></li>
+	          <li class="teamlink"> <a href="team.html">TEAM</a></li>
+						<li class="contactlink"> <a href="contact.html">CONTACT</a></li>
+
+
 
 					</nav>
+
 		</header>
 
 	<main>
