--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	      <h4>STUDIO</h4>
 	      <nav>
 	        <ul>
-	          <li> <a href="#servicesheading">SERVICES</a></li>
-	          <li> <a href="portfolio.html">PORTFOLIO</a></li>
-	          <li> <a href="about.html">ABOUT</a></li>
-	          <li> <a href="team.html">TEAM</a></li>
-						<li> <a href="contact.html">CONTACT</a></li>
+	          <li class="serviceslink"> <a href="#servicesheading">SERVICES</a></li>
+	          <li class="portfoliolink"> <a href="portfolio.html">PORTFOLIO</a></li>
+	          <li class="aboutlink"> <a href="about.html">ABOUT</a></li>
+	          <li class="teamlink"> <a href="team.html">TEAM</a></li>
+						<li class="contactlink"> <a href="contact.html">CONTACT</a></li>
 
 					</nav>
 		</header>
