added rounded circle team images

--- a/team.html
+++ b/team.html
@@ -41,24 +41,44 @@
 		</section>
 
 		<section class="teamthumbnails">
-			<h3>Kay Garland</h3>
-			<p class="thumbnailinfo">Lead Designer</p>
 
-      <img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
+      <div>
+        <img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/kay-image-jilene.jpg" alt="Image of team member Kay Garland">
 
-			<h3>Larry Parker</h3>
-			<p class="thumbnailinfo">Lead Marketer</p>
+        <span class="Kay Image"><h5>Kay Garland</h5></span>
 
-      <img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
+        <p class="thumbnailinfo">Lead Designer</p>
 
-			<h3>Diana Petersen</h3>
-			<p class="thumbnailinfo">Lead Developer</p>
+        <img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
 
-      <img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
+     </div>
 
-     <p class="bottombody">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+
+    <div>
+    <img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/larry-image-jilene.jpg" alt="Image of team member Larry Parker">
+
+    <span class="Larry Image"><h5>Larry Parker</h5></span>
+
+		<p class="thumbnailinfo">Lead Marketer</p>
+
+    <img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
+    </div>
+
+    <div>
+    <img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/diana-image-jilene.jpg" alt="Image of team member Diana Petersen">
+
+    <span class="Diana Image"><h5>Diana Petersen</h5></span>
+
+		<p class="thumbnailinfo">Lead Developer</p>
+
+    <img src="https://fit-front-end-course.s3.amazonaws.com/social-icons-jilene.png" alt="Social Media Icons Twitter Facebook and LinkedIn"></img>
+  </div>
 
 		</section>
+
+    <div>
+         <p class="bottombody">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+    </div>
 
 </main>
 
