added images to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,32 +38,79 @@
 					</nav>
 
 		</header>
-
-	<main>
 		<section class="portfolioheader">
 			<h2><a id="portfolio">PORTFOLIO</a></h2>
 			<p class="portfolioinfo">Lorem ipsum dolor sit amet consectetur.</p>
 		</section>
 
+	<main>
+
+
+
 		<section class="portfoliothumbnails">
-			<h3>Threads</h3>
-			<p class="thumbnailinfo">Illustration</p>
 
-			<h3>Explore</h3>
-			<p class="thumbnailinfo">Graphic Design</p>
+<div>
+				<img class="img-fluid sqaure" src="https://fit-front-end-course.s3.amazonaws.com/01-threads-thumbnail-jilene.jpg" alt="Image of clothes on a hanger">
 
-			<h3>Finish</h3>
-			<p class="thumbnailinfo">Identity</p>
+				<span class="Threads Image"><h5>Threads</h5></span>
 
-			<h3>Lines</h3>
-			<p class="thumbnailinfo">Branding</p>
+				<p class="thumbnailinfo">Illustration</p>
 
-			<h3>Southwest</h3>
-			<p class="thumbnailinfo">Website Design</hp>
 
-			<h3>Window</h3>
-			<p class="thumbnailinfo">Photography</p>
+				<img class="img-fluid sqaure" src="https://fit-front-end-course.s3.amazonaws.com/02-explore-thumbnail-+jilene.jpg" alt="Image of girl on sunset mountain top wearing a red and white Keep Exploring flag across her back">
+
+				<span class="Explore Image"><h5>Explore</h5></span>
+
+				<p class="thumbnailinfo">Graphic Design</p>
+
+
+
+				<img class="img-fluid sqaure" src="https://fit-front-end-course.s3.amazonaws.com/03-finish-thumbnail-+jilene.jpg" alt="Image of wood working space">
+
+				<span class="Finish Image"><h5>Finish</h5></span>
+
+				<p class="thumbnailinfo">Identity</p>
+
+
+	</div>
+
 		</section>
+
+
+
+
+<section>
+
+<div>
+
+
+				<img class="img-fluid sqaure" src="https://fit-front-end-course.s3.amazonaws.com/04-lines-thumbnail-+jilene.jpg" alt="Stock image of work desk with laptop and camera accessories">
+
+				<span class="Lines Image"><h5>Lines</h5></span>
+
+				<p class="thumbnailinfo">Branding</p>
+
+
+
+
+				<img class="img-fluid sqaure" src="https://fit-front-end-course.s3.amazonaws.com/05-southwest-thumbnail-jilene.jpg" alt="Image of desk space with laptop, eye glasses, and notepad">
+
+				<span class="Southwest Image"><h5>Southwest</h5></span>
+
+				<p class="thumbnailinfo">Website Design</p>
+
+
+				<img class="img-fluid sqaure" src="https://fit-front-end-course.s3.amazonaws.com/06-window-thumbnail-jilene.jpg" alt="Image of a hand taking a mobile phone photo of the Arc de Triomphe monument in Paris, France">
+
+				<span class="Window Image"><h5>Window</h5></span>
+
+				<p class="thumbnailinfo">Photography</p>
+
+</div>
+
+
+
+</section>
 
 </main>
 
