changes made to image circles

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 	          <li class="teamlink"> <a href="team.html">TEAM</a></li>
 						<li class="contactlink"> <a href="contact.html">CONTACT</a></li>
 					</ul>
-					
+
 					</nav>
 		</header>
 
@@ -42,6 +42,21 @@
 		</section>
 
 		<section class="abouttimeline">
+
+			<div>
+				<img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/image1-copy-jilene.jpg" alt="Image 1">
+
+				<span class="Year"><h5>2009-2011</h5></span>
+				<span class="Image"><h5>Our Humble Beginnings</h5></span>
+
+				<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+
+
+
+
+
+
+
 			<h5>2009-2011</h5>
 			<h5>Our Humble Beginnings</h5>
 			<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
