added images to assets folder & updated page with images

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 					</nav>
 		</header>
-
+<div>
 	<main>
 		<section class="aboutheader">
 			<h2><a id="about">About</a></h2>
@@ -50,35 +50,70 @@
 				<span class="Image"><h5>Our Humble Beginnings</h5></span>
 
 				<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+</div>
+
+<div>
+
+	<img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/image2-copy-jilene.jpg" alt="Image 2">
+
+	<span class="Year"><h5>March 2011</h5></span>
+	<span class="Image"><h5>An Agency is Born</h5></span>
+
+	<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
 
 
+</div>
+
+<div>
+
+	<img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/image3-copy-jilene.jpg" alt="Image 3">
+
+	<span class="Year"><h5>December 2012</h5></span>
+	<span class="Image"><h5>Transition to Full Service</h5></span>
+
+	<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
 
 
+</div>
+
+<div>
+
+	<img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/image4-copy-jilene.jpg" alt="Image 4">
+
+	<span class="Year"><h5>July 2014</h5></span>
+	<span class="Image"><h5>Phase Two Expansion</h5></span>
+
+	<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
 
 
+</div>
 
-			<h5>2009-2011</h5>
-			<h5>Our Humble Beginnings</h5>
-			<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+<div>
 
-			<h5>March 2011</h5>
-			<h5>An Agency is Born</h5>
-			<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+	<img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/image4-copy-jilene.jpg" alt="Image 4">
 
-			<h5>December 2012</h5>
-			<h5>Transition to Full Service</h5>
-			<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+	<span class="Year"><h5>July 2014</h5></span>
+	<span class="Image"><h5>Phase Two Expansion</h5></span>
 
-			<h5>July 2014</h5>
-			<h5>Phase Two Expansion</h5>
-			<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+	<p class="timelineinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
 
-			<h5>Be Part Of Our Story!</h5>
+
+</div>
+
+<div>
+
+	<img class="img-fluid rounded-circle" src="https://fit-front-end-course.s3.amazonaws.com/image5-copy-ourstory-jilene.png" alt="Image 5">
+
+	
+
+
+</div>
+
 
 		</section>
 
 </main>
-
+</div>
 <br>
 
 <hr>
